# conan-toolchain

./: .gitignore  LICENSE  ReadMe.md
.github/workflows/: cmake.yml
src/: auto-conan.cmake  conan-toolchain.cmake
test/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  build.ps1  conanfile.txt  main.cpp  v142.txt  v143.txt  vcpkg.json
